fixed overflow issue

--- a/styles.scss
+++ b/styles.scss
@@ -829,12 +829,17 @@ a {
 
 .aboutDesc {
   width: 25vw;
-  height: 33vw;
   /*background-color: salmon;*/
   padding: 0 20px;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
-  overflow: auto;
+}
+
+@media screen and (min-width: 1001px) {
+  .aboutDesc {
+    height: 33vw;
+    overflow: auto;
+  }
 }
 
 .aboutDescP{
@@ -995,6 +1000,7 @@ $timelineBtnWidth: 25vw;
 
   .aboutDesc {
     width: 77vw;
+    height: 100%;
     padding: 0;
     font-size: 37px;
   }
